sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: not found: value getNombreVAleurs
def bubbleSort()  {getNombreVAleurs(C): Int;
                   ^